--- a/content/intro.tex
+++ b/content/intro.tex
@@ -2,7 +2,7 @@
 
 \section{Motivation} \label{c:motiv}
 
-By winning the Imagenet Large Scale Visual Recognition Challenge in 2012, convolutional neural networks gained momentum \cite{NIPS2012_4824}. 
+By winning the Imagenet Large Scale Visual Recognition Challenge in 2012, convolutional neural networks (CNNs) gained momentum \cite{NIPS2012_4824}. 
 Their powerful abstraction mechanism made them one of the most used algorithms in the fields of image and video classification and description and speech recognition \cite{abdel2014convolutional}\cite{karpathy2014large}\cite{LeCun2015}\cite{szegedy2015going}. 
 This can be primarily contributed to their ability to extract high level features on spatial and/or temporal conditioned data and utilize the compositional structure in information of the world.
 
@@ -16,18 +16,18 @@ DBNs have shown excellent performance on image classification tasks in the early
 
 Compared to classical CNNs, DBNs allow recurrent connections and can be trained unsupervised. 
 They have been described as  "probably the most biologically plausible learning algorithm for deep architectures we currently know” \cite{bengio2015towards}. 
-DBNs can be used as generative model as well, which means they can sample data according to a learned distribution, e.g. find the most probable completion for a partially erased image.
+DBNs can be used as a generative model as well, which means they can sample data according to a learned distribution, e.g., find the most probable completion for a partially erased image.
 
 Adding convolution to DBNs increased the performance of DBNs on image classification tasks, caught up with the state of the art results and made the system more similar to the primate visual cortex than a standard DBN \cite{lee2009convolutional}. 
 
 All these approaches use scalar values between neurons at discrete time slices to propagate information. 
 While being well suited for GPUs, they are not very biologically plausible, since biological neuron interleave linear and non-linear operations, communicate by stochastic binary values and are not synchronized \cite{bengio2015towards}. 
-Spiking neural networks (SNNs), designed to simulate the communication between neurons with spikes, work in continuous time by design and do not suffer from the aforementioned discrepancies of classical artificial neural networks.
+Spiking neural networks (SNNs) designed to simulate the communication between neurons with spikes work in continuous time by design and do not suffer from the aforementioned discrepancies of classical artificial neural networks.
 
 \section{Problem Statement} \label{c:probstate}
 
 To the best of our knowledge, up to today, no system which utilizes the benefits of a convolutional architecture, spiking neural networks and deep belief networks altogether has been suggested. 
-The main objective of the presented thesis is to realize such a spiking network, which integrates convolution and can be easily trained utilizing an RBM learning algorithm in order to extract high level features. 
+The main objective of the presented thesis is to realize such a spiking network which integrates convolution and can be easily trained utilizing an RBM learning algorithm in order to extract high level features. 
 Two approaches are explored. 
 The first approach trains convolutional RBMs on discretized input data to build up a DBN which is then converted to a SNN. 
 The second approach learns from continuous, event-driven input-data and adapts the synaptic weights with a plasticity rule with shared weights to train spiking convolutional RBMs directly. 
@@ -52,8 +52,8 @@ Both approaches will learn to extract high level features which can be further u
 
 This thesis describes the approach and implementation of spiking convolutional deep belief networks to extract high level features on continuous visual input. The thesis is structured as follows:
 
-Chapter \ref{c:backgrnd} introduces background information to present the state-of-the-art research used in this thesis in Chapter \ref{c:relwork}. 
-Chapter \ref{c:approach} will describe the different approaches to build a spiking convolutional deep belief networks. 
-In Chapter \ref{c:impl} the different implementation steps and architectures will be described. 
+Chapter \ref{c:backgrnd} introduces background information to present the state-of-the-art research used in Chapter \ref{c:relwork}. 
+Chapter \ref{c:approach} describes the different approaches to build a spiking convolutional deep belief networks. 
+In Chapter \ref{c:impl} the different implementation steps and architectures are described. 
 Chapter \ref{c:expres} outlines and compares the performance of the networks and 
-Chapter \ref{c:conclusion} will conclude the gathered insight of this thesis, state its limitations and give suggestions for further improvements and research.  
+Chapter \ref{c:conclusion} will conclude the gathered insight of this thesis, state its limitations, and give suggestions for further improvements and research.  
