--- a/content/soa.tex
+++ b/content/soa.tex
@@ -1,6 +1,6 @@
 \chapter{Related Work} \label{c:relwork}
 
-In this section we present recent work related to convolutional RBMs which have already been proposed in discrete time.
+In this section we present recent work related to convolutional RBMs, which have already been proposed in discrete time.
 We further show recent approaches for sampling and implementing Boltzmann machines in spiking neural networks.
 
 \section{Convolutional RBM} \label{c:convrbm}
@@ -19,7 +19,7 @@ The down propagation utilizes the flipped kernel $\tilde{W}$  (see Fig \ref{fig:
 \[
 P(\textbf{v}| \textbf{h}) = \sigma((\tilde{W} * \textbf{h}) + b_v).
 \]
-Using the convolution operation, the energy of the network can thus be rewritten as
+Using the convolution operation the energy of the network can thus be rewritten as
 \[
 E(\textbf{h} , \textbf{v}) = \textbf{h}^\intercal(W * \textbf{v}) + \textbf{h}^\intercal \textbf{b}_{h} + \sum b v_i.
 \]
@@ -101,7 +101,7 @@ This drives the activity in a block to be sparse and likely only one or none uni
 Indicated by stochastic neural transitions found in the brain in experimental studies, a new way of information encoding in the brain as representations of probability distributions and probabilistic interference has been suggested \cite{griffiths2008bayesian}\cite{lee2003hierarchical}\cite{yang2007probabilistic}.
 
 
-A first framework which proposed how spiking neurons can perform MCMC sampling was introduced by Buesing \cite{Buesing2011}.
+A first framework, which proposed how spiking neurons can perform MCMC sampling, was introduced by Buesing \cite{Buesing2011}.
 A simplification to discretize time into time slices can be introduced without interfering with the basic concept (see Buesing for the generalization to continuous time \cite{Buesing2011}).
 
 The neuron network can be considered as a network of RVs, where the state of a neuron is defined by its firing. 
@@ -173,7 +173,7 @@ Replacing the rectangular PSP with a more biological plausible alpha shaped PSP 
 Petrovici improved the model by replacing the abstract stochastic neuron model by conductance bases LIF neurons, a more common and biologically inspired neuron model \cite{Petrovici2016}.
 He proved under high frequency (Poisson) noise, which leads to a high conductance state of the membrane potential, the neuron shows stochastic firing, determined by the input current and the noise frequency (as described in Chapter \ref{c:hcs}).
 This allows the neuron to show a firing behaviour which can be matched by a sigmoid function (see Fig. \ref{fig:snnsamp4}).  
-By scaling the weights, the LIF neurons can be used to perform neural sampling similar to Buesing.
+By scaling the weights the LIF neurons can be used to perform neural sampling similar to Buesing.
 
 \begin{figure}[h!]
 	\centering
@@ -225,15 +225,16 @@ In addition, before applying the final weights, Diehl et al. use a model- and da
 
 \begin{figure}
 	\centering
-	\begin{subfigure}[t]{.50\textwidth}
+	\begin{subfigure}[t]{.80\textwidth}
   		\centering
-  		\includegraphics[width=.9\linewidth]{imgs/cnn_snn_conv1.jpg}
+  		\includegraphics[width=.97\linewidth]{imgs/cnn_snn_conv1.jpg}
   		\caption{A for conversion adapted CNN architecture.}
   		\label{fig:sub1}
 	\end{subfigure}%
-	\begin{subfigure}[t]{.50\textwidth}
+	
+	\begin{subfigure}[t]{.80\textwidth}
   		\centering
-  		\includegraphics[width=.9\linewidth]{imgs/cnn_snn_conv2.jpg}
+  		\includegraphics[width=.97\linewidth]{imgs/cnn_snn_conv2.jpg}
   		\caption{A to an SNN converted convolutional network.}
   		\label{fig:sub2}
 	\end{subfigure}
@@ -248,8 +249,8 @@ They use multiple identical binary stochastic input units for the each element i
 
 The approaches described next make use of the synaptic sampling described in the previous Chapter \ref{c:snnsampling}.
 
-One approach is the evtCD by Daniel Neil which works in continuous time with spiking networks and a STDP variant \cite{Diehl2015}.
-He simulates the positive and negative phase of the CD by unrolling the RBM with shared weights (a seen in Fig. \ref{fig:evtCD} where the RBM is unrolled to simulate CD-1 updates). 
+One approach is the evtCD by Neil et al., which works in continuous time with spiking networks and a STDP variant \cite{Diehl2015}.
+He simulates the positive and negative phase of the CD by unrolling the RBM with shared weights (as seen in Fig. \ref{fig:evtCD} where the RBM is unrolled to simulate CD-1 updates). 
 But this approach only allows a fixed number of CD steps and is, due to the weight synchronization, not very plausible.
 
 \begin{figure}
@@ -261,7 +262,7 @@ But this approach only allows a fixed number of CD steps and is, due to the weig
 
 A more sophisticated approach, called eCD, which also uses STDP was proposed by Neftci et al.\cite{Neftci2013}.
 They use bidirectional synapses between a visible and hidden layer of LIF neurons.
-They implement an adapted symmetric STDP variant which, at a given time, only allows LTP or LDP to model the positive or negative phase of the CD algorithm respectively (see Figure \ref{fig:ecdcomp} for a comparison). 
+They implement an adapted symmetric STDP variant, which, at a given time, only allows LTP or LDP to model the positive or negative phase of the CD algorithm respectively (see Figure \ref{fig:ecdcomp} for a comparison). 
 The symmetric learning rule for two neurons, given their spike train $v_i(t)$ and $h_j(t)$, can be expressed as:
 \[
 \Delta w_{ij} = \mu g(t) STDP(v_i(t), h_j(t)),
@@ -288,7 +289,7 @@ In their approach a training step can be divided into four phases (see Fig. \ref
 \begin{enumerate}
 \item The data signal is applied and the system is allowed to model the data distribution ($g(t)=0$).
 \item Positive STDP is used to get $v_i h_j$-data (with LTP) and is added to the weights (postive phase $g(t)=1$).
-\item The data signal is remove and the system is allowed to model the model distribution ($g(t)=0$).
+\item The data signal is removed and the system is allowed to model the model distribution ($g(t)=0$).
 \item Negative STDP is used to get $v_i h_j$-model (with LTD) and is subtracted from the synaptic weights (negative phase $g(t)=-1$).
 \end{enumerate}
 
